@startuml

' Definición de clases
class Slider {
  - id: Integer
  - title: String
  - subtitle: String
  - imageUrl: String
  - activityUrl: String
  - created: Datetime 
  - updated: Datetime
}

class NewsItem {
  - id: Integer
  - title: String
  - subtitle: String
  - content: String
  - imageUrl: String
  - url: String
  - published: Datetime 
  - created: Datetime 
  - updated: Datetime
}

class Mentor {
  - id: Integer
  - code: Integer
  - fullName: String
  - charge: String
  - email: String
  - imageUrl: String
  - created: Datetime 
  - updated: Datetime
}

class Student {
  - id: Integer
  - code: Integer
  - fullName: String
  - googleId: String
  - email: String
  - imageUrl: String
  - created: Datetime 
  - updated: Datetime
}

class MentorSpecialism{
  - id: Integer
  - mentorId: Integer
  - specialismId: Integer
}

class Specialism{
  - id: Integer
  - name: String
  - created: Datetime 
  - updated: Datetime
}

' Relaciones
Mentor --* MentorSpecialism
Specialism --* MentorSpecialism

@enduml